--- a/src/Styles/api.css
+++ b/src/Styles/api.css
@@ -3,8 +3,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   padding: 40px 20px; 
   box-sizing: border-box;
+}
+
+.hello-text {
+  font-size: 15px;
+  text-transform: uppercase;
+  letter-spacing: 18px;
+  color: #c6866c;;
+  margin-bottom: 5px;
 }
 
 .card-main {
